# StarlightVision

./: README.md  example.py  pyproject.toml  starlightv2.py
Starlight/: __init__.py  trainer.py
Starlight/core/: elucidated.py  gen2.py  gen2_video.py
Starlight/model/: starlight.py
starlight_vision/: __init__.py  model.py  trainer.py
starlight_vision/core/: attention.py  elucidated.py  gen2.py  gen2_video.py  t5.py
